--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -3,13 +3,15 @@
 <head>
     <title>Todo App</title>
     <link rel="stylesheet" href="/static/stylesheets/style.css" type="text/css">
+    <link rel="stylesheet" href="/static/stylesheets/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/css/bootstrap-datepicker3.css">
     <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai|Candal|Chewy&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
         integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
 
 <body>
-    <div class="todo-container">
+    <!-- <div class="todo-container">
         <h2>To-Do List</h2>
         <div class="todo">
             <form action="/" method="POST" class="todo-header">
@@ -29,8 +31,76 @@
                             <span class="fas fa-times"></span>
                         </a>
                     </li>
+
                     <% }) %>
             </ul>
         </div>
-    </div>
+    </div> -->
+    <form class="container m-5 p-2 rounded mx-auto bg-light shadow" action="/" method="POST">
+        <!-- App title section -->
+        <div class="row m-1 p-4">
+            <div class="col">
+                <div class="p-1 h1 text-primary text-center mx-auto display-inline-block">
+                    <i class="fa fa-check bg-primary text-white rounded p-2"></i>
+                    <u>My Todo</u>
+                </div>
+            </div>
+        </div>
+        <!-- Create todo section -->
+        <div class="row m-1 p-3">
+            <div class="col col-11 mx-auto">
+                <div class="row bg-white rounded shadow-sm p-2 add-todo-wrapper align-items-center justify-content-center">
+                    <div class="col">
+                        <input class="form-control form-control-lg border-0 add-todo-input bg-transparent rounded" type="text" placeholder="Add new .."/>
+                    </div>
+                    <div class="col-auto px-0 mx-0 mr-2">
+                        <button type="submit" class="btn btn-primary">Add</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="p-2 mx-4 border-black-25 border-bottom"></div>
+        <!-- Todo list section -->
+        <div class="row mx-1 px-5 pb-3 w-80">
+            <div class="col mx-auto">
+                <!-- Todo Item 1 -->
+                <% todoTasks.forEach(details=> { %>
+                <div class="row px-3 align-items-center todo-item rounded">
+                    <div class="col-auto m-1 p-0 d-flex align-items-center">
+                        <h2 class="m-0 p-0">
+                            <i class="fa fa-square-o text-primary btn m-0 p-0 d-none" data-toggle="tooltip" data-placement="bottom" title="Mark as complete"></i>
+                            <i class="fa fa-check-square-o text-primary btn m-0 p-0" data-toggle="tooltip" data-placement="bottom" title="Mark as todo"></i>
+                        </h2>
+                    </div>
+                    <div class="col px-1 m-1 d-flex align-items-center">
+                        <label type="text" class="form-control form-control-lg border-0 edit-todo-input bg-transparent rounded px-3" readonly><%= details.content %></label>
+                    </div>
+                    <div class="col-auto m-1 p-0 px-3 d-none">
+                    </div>
+                    <div class="col-auto m-1 p-0 todo-actions">
+                        <div class="row d-flex align-items-center justify-content-end">
+                            <h5 class="m-0 p-0 px-2">
+                                <i class="fa fa-pencil text-info btn m-0 p-0" data-toggle="tooltip" data-placement="bottom" title="Edit todo"></i>
+                            </h5>
+                            <h5 class="m-0 p-0 px-2">
+                                <i class="fa fa-trash-o text-danger btn m-0 p-0" data-toggle="tooltip" data-placement="bottom" title="Delete todo"></i>
+                            </h5>
+                        </div>
+                        <div class="row todo-created-info">
+                            <div class="col-auto d-flex align-items-center pr-2">
+                                <i class="fa fa-info-circle my-2 px-2 text-black-50 btn" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Created date"></i>
+                                <label class="date-label my-2 text-black-50">28th Jun 2020</label>
+                            </div>
+                        </div>
+                    </div>
+                </div> 
+                <% }) %>           
+            </div>
+        </div>
+    </form>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
+
+
+
