--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,123 +1,3 @@
-/* * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    background: #e27442;
-}
-
-.todo-container {
-    color: white;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    padding: 20px;
-    width: 600px;
-    transform: translate(-50%, -50%);
-    background: rgba(255, 255, 255, 0.1);
-    border-radius: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.todo {
-    width: 400px;
-}
-
-.todo-container h2 {
-    padding: 10px;
-    font-family: 'Candal', sans-serif;
-    font-size: 2em;
-}
-
-.todo-header input {
-    width: 92%;
-    border: none;
-    border-radius: 5px;
-    height: 20px;
-    font-family: 'Candal', sans-serif;
-}
-
-.todo-header button {
-    color: white;
-    border: none;
-    border-radius: 50%;
-    cursor: pointer;
-    padding: 5px;
-    font-family: 'Candal', sans-serif;
-    background-color: rgb(51, 212, 100);
-}
-
-.todo-container ul {
-    list-style: none;
-}
-
-.todo-list-item {
-    padding: 10px;
-    margin-top: 10px;
-    border: none;
-    border-radius: 5px;
-    font-family: 'Candal', sans-serif;
-    background: rgba(0, 0, 0, 0.3);
-    display: flex;
-    flex-direction: row;
-}
-
-.todo-list-item form {
-    width: 100%;
-    display: flex;
-}
-
-.todo-list-item input {
-    flex-grow: 2;
-    margin-right: 20px;
-    border: none;
-    border-radius: 5px;
-    font-family: 'Candal', sans-serif;
-}
-
-.todo-list-item button {
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    padding: 5px;
-    font-family: 'Candal', sans-serif;
-    background-color: rgb(51, 212, 100);
-}
-
-.todo-list-item .cancel {
-    color: white;
-    text-decoration: none;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    padding: 5px;
-    font-family: 'Candal', sans-serif;
-    background-color: rgb(223, 43, 43);
-    margin-left: 5px;
-}
-
-.todo-list-item div {
-    flex-grow: 2;
-}
-
-.todo-list-item .edit {
-    color: rgb(143, 233, 58);
-    margin-right: 10px;
-    cursor: pointer;
-    text-decoration: none;
-}
-
-.todo-list-item .remove {
-    color: rgb(243, 96, 96);
-    margin-right: 5px;
-    cursor: pointer;
-    text-decoration: none;
-} */
 body {
     font-family: "Open Sans", sans-serif;
     line-height: 1.6;
@@ -128,8 +8,7 @@ body {
     outline: none;
 }
 
-.add-todo-input:focus,
-.edit-todo-input:focus {
+.add-todo-input:focus {
     border: none !important;
     box-shadow: none !important;
 }
@@ -153,4 +32,23 @@ body {
 
 .todo-item.editing .todo-actions .edit-icon {
     display: none !important;
+}
+
+.col-auto>a {
+    margin-right: 10px;
+    margin-left: 10px;
+}
+
+input.radio {
+    width: 20px;
+    height: 20px;
+}
+.edit-todo-input{
+    display: block;
+}
+input:checked+span {
+    text-decoration: line-through;
+}
+.btn-outline-primary{
+    margin-right: 20px;
 }
