--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -40,10 +40,10 @@
         <div class="p-2 mx-4 border-black-25 border-bottom"></div>
         <!-- Todo list section -->
         <div class="row mx-1 px-5 pb-3 w-80">
-            <div class="col mx-auto">
+            <div class="col mx-auto tasks__list">
                 <!-- Todo Item 1 -->
                 <% todoTasks.forEach(details=> { %>
-                    <div class="row px-3 align-items-center todo-item rounded">
+                    <div class="row px-3 align-items-center todo-item rounded tasks__item">
                         <div class="col px-1 m-1 d-flex align-items-center">
                             <div class="d-flex align-items-center">
                                 <label type="text" class="form-control
@@ -76,9 +76,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="p-2 mx-4 border-black-25 border-bottom"></div>
                     <% }) %>
             </div>
         </div>
     </form>
+    <script src="/static/stylesheets/drag'n'drop.js">
+    </script>
 </body>
